@@ -15,6 +15,7 @@
 #include "region-allocator.h"
 
 #include <openssl/hmac.h>
+#include <openssl/md5.h>
 #include <openssl/sha.h>
 
 /*
